[package]
name = "rust-telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
# Add sqlx for Neon DB connection
sqlx = { version = "0.8.6", features = [ "postgres", "macros", "runtime-tokio-native-tls" ] }