[package]
name = "rust-telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.17", features = ["full", "macros"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
# Add sqlx for Neon DB connection
rand = "0.10.2"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.19"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }